# prayer-times-mcp

./: CLAUDE.md  README.md  SPEC.md  main.py  pyproject.toml
.claude/: settings.local.json
src/prayer_times_mcp/: __init__.py  __main__.py  client.py  server.py  tools.py  utils.py
tests/: test_api.py  test_tools.py  test_utils.py
